<resources>
    <string name="app_name">Shoe Store Inventory App</string>
    <string name="user_name_text">Tên đăng nhập</string>
    <string name="password_text">Mật khẩu</string>
    <string name="login_text">Đăng nhập</string>
    <string name="welcome_text">Chào mừng đến với Shoe Store!</string>
    <string name="instructions_screen">Hướng dẫn</string>
    <string name="add">Add</string>
    <string name="continue_text">Tiếp tục</string>
    <string name="logout">Đăng xuất</string>
    <string name="register_text">Đăng ký</string>
    <string name="continue_welcome_text">Hãy nhấn nút "Tiếp tục" để trãi nghiệm</string>
    <string name="cancel_text">Huỷ</string>
    <string name="description">- Bấm nút "Hủy" để quay lại màn hình danh sách giày.\n\n- Bấm nút "Lưu" để quay lại màn hình danh sách giày và thêm một sản phẩm giày mới.</string>
    <string name="save_text">Lưu</string>
    <string name="add_shoe">Thêm giày</string>
    <string name="shoe_detail_text">Chi tiết giày</string>
    <string name="shoe_name">Tên Giày</string>
    <string name="company">Công ty</string>
    <string name="shoe_size_text">Kích cỡ giày</string>
    <string name="description_text">Mô tả</string>
    <string name="shoe_name_text">Tên giày: </string>
    <string name="size_shoe_text">Kích cỡ: </string>
    <string name="company_text">Công ty: </string>
    <string name="decription_text">Mô tả: </string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions</string>
    <string name="login">Login</string>
    <string name="shoe_list">Shoe List</string>
    <string name="shoe_detail">Shoe Detail</string>
</resources>